Fix modal windows not showing on game menu.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1925,7 +1925,7 @@ table tr td:last-child a:hover,
 	width: 500px;
 	margin-left: auto;
 	margin-right: auto;
-	z-index: 99999;
+	z-index: 999999;
 	position: absolute;
 	color: #666;
 	display: none;
@@ -1966,7 +1966,7 @@ table tr td:last-child a:hover,
 	position: fixed;
 	top: 0;
 	display: none;
-	z-index: 99998;
+	z-index: 999998;
 	background-position: 0 0;
 	background-repeat: repeat;
 	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGNiOAMAANUAz5n+TlUAAAAASUVORK5CYII=);
